# discord-bot-rust

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.dev.yml  sqlx-data.json
migrations/: 20221206120916_init.down.sql  20221206120916_init.up.sql
prisma/: schema.prisma
prisma-cli/: Cargo.toml
prisma/migrations/20230120215105_init/: migration.sql
src/: main.rs  prisma.rs
src/commands/: add.rs  deafen.rs  dream.rs  drink.rs  join.rs  leave.rs  mod.rs  mute.rs  pause.rs  play.rs  resume.rs  skip.rs  stop.rs  undeafen.rs  unmute.rs
src/db/: dream.rs  drink.rs  mod.rs
src/events/: mod.rs  song_end.rs  song_volumen.rs  track_end.rs
src/handler/: bot.rs  mod.rs  reminder.rs
src/lib/: messages.rs  utils.rs
src/utils/: channels.rs  messages.rs
