[package]
name = "dustin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.11.5", features = ["gateway", "standard_framework", "client", "voice", "model", "cache", "http", "rustls_backend", "temp_cache"] }
rand = "0.8.5"
songbird = { version = "0.3.0", features = ["builtin-queue"] }