[package]
name = "dustin"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "prisma-cli"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.11.5", default_features = false, features = [
    "gateway",
    "client",
    "voice",
    "model",
    "cache",
    "http",
    "rustls_backend",
    "temp_cache",
] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
anyhow = "1"
cron = "0.12"
chrono = "0.4"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.4", default-features = false, features = [
    "sqlite",
] }
